--- a/jpa-demo/pom.xml
+++ b/jpa-demo/pom.xml
@@ -26,6 +26,11 @@
             <version>8.3.0</version>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.13.1</version>
